# yourip

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  debug.sh  dev-requirements.txt  docker-compose.debug.yml  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  vercel.json  wsgi.py
.github/: CODEOWNERS  dependabot.yml  labels.yml  release.yml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  02_FEATURE_REQUEST.md  03_CODEBASE_IMPROVEMENT.md  config.yml
.github/workflows/: codeql-analysis.yml  create-new-release.yml  deploy-flyio-app.yml  deploy-flyio-pr.yml  deploy.yml  generate-requirements.yml  labels.yml  lock.yml  main.yml  mypy-linting.yml  pr-fly-deploy.yml  pr-flyio-deploy.yml  publish-docker-image.yml  pylint.yml  pytests-coverage.yml  release.yml  sourcery.yml  stale.yml  update-requirements.yml
app/: main.py
app/templates/: index.html
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  SECURITY.md
templates/: index.html
tests/: test_app.py
