[tool.poetry]
name = "yourip"
version = "0.1.5"
description = "A simple web site to return yourIP"
authors = ["mauvehed <mh@mvh.dev>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/mauvehed/yourIP"
homepage = "https://yourIP.app/"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "3.0.3"
gunicorn = "^22.0.0"
markupsafe = "^2.1.5"
poetry-plugin-export = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
