[tool.poetry]
name = "yourip"
version = "0.1.7"
description = "A simple web site to return yourIP"
authors = ["mauvehed <mh@mvh.dev>"]
license = "MIT"
package-mode = false

readme = "README.md"

repository = "https://github.com/mauvehed/yourIP"
homepage = "https://yourIP.app/"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.3"
gunicorn = ">=23.0.0"
markupsafe = "^3.0.2"
zipp = ">=3.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.6.7"
mypy = "^1.13.0"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
